tests/fixtures/invalid/max_bool.py
# Cannot call max() with Bool
x = max(True)
